Announce CVE-2018-11786 advisory

--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -317,6 +317,10 @@
                 <p>CVE-2016-8750 : Apache Karaf's LDAPLoginModule is vulnerable to LDAP injection.</p>
                 <a class="btn btn-outline-primary" href="security/cve-2016-8750.txt">Notes &raquo;</a>
               </div><!-- /.blog-post -->
+							<div class="pb-4 mb-3">
+								<p>CVE-2018-11786 : Enforce SSH permission based on RBAC.</p>
+								<a class="btn btn-outline-primary" href="security/cve-2018-11786.txt">Notes &raquo;</a>
+							</div>
 
             </div><!-- /.blog-main -->
         </div>
