--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -321,6 +321,10 @@
 								<p>CVE-2018-11786 : Enforce SSH permission based on RBAC.</p>
 								<a class="btn btn-outline-primary" href="security/cve-2018-11786.txt">Notes &raquo;</a>
 							</div>
+							<div class="pb-4 mb-3">
+								<p>CVE-2018-11787 : Unsecure access to Gogo shell in the webconsole.</p>
+								<a class="btn btn-outline-primary" href="security/cve-2018-11787.txt">Notes &raquo;</a>
+							</div>
 
             </div><!-- /.blog-main -->
         </div>
