--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -350,6 +350,10 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-lock"></i> Security Advisories</h2>
 
               <div class="pb-4 mb-3">
+                <p>CVE-2014-0219 : Apache Karaf enables a shutdown port on the loopback interface, which allows local users to cause a denial of service (shutdown) by sending a shutdown command to all listening high ports.</p>
+                <a class="btn btn-outline-primary" href="security/cve-2014-0219.txt">Notes &raquo;</a>
+              </div>
+              <div class="pb-4 mb-3">
                 <p>CVE-2016-8750 : Apache Karaf's LDAPLoginModule is vulnerable to LDAP injection.</p>
                 <a class="btn btn-outline-primary" href="security/cve-2016-8750.txt">Notes &raquo;</a>
               </div><!-- /.blog-post -->
@@ -361,10 +365,10 @@
 								<p>CVE-2018-11787 : Unsecure access to Gogo shell in the webconsole.</p>
 								<a class="btn btn-outline-primary" href="security/cve-2018-11787.txt">Notes &raquo;</a>
 							</div>
-              <div class="pb-4 mb-3">
-                <p>CVE-2014-0219 : Apache Karaf enables a shutdown port on the loopback interface, which allows local users to cause a denial of service (shutdown) by sending a shutdown command to all listening high ports.</p>
-                <a class="btn btn-outline-primary" href="security/cve-2014-0219.txt">Notes &raquo;</a>
-              </div>
+							<div class="pb-4 mb-3">
+								<p>CVE-2018-11788 : XXE vulnerability found on Apache Karaf.</p>
+								<a class="btn btn-outline-primary" href="security/cve-2018-11788.txt">Notes &raquo;</a>
+							</div>
 
             </div><!-- /.blog-main -->
         </div>
