Publish CVE-2019-0191 security advisory

--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -372,6 +372,10 @@
 								<p>CVE-2018-11788 : XXE vulnerability found on Apache Karaf.</p>
 								<a class="btn btn-outline-primary" href="security/cve-2018-11788.txt">Notes &raquo;</a>
 							</div>
+              <div class="pb-4 mb-3">
+                <p>CVE-2019-0191: Zip-slip vulnerability in KAR deployer.</p>
+                <a class="btn btn-outline-primary" href="security/cve-2019-0191.txt">Notes &raquo;</a>
+              </div>
 
             </div><!-- /.blog-main -->
         </div>
