--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -376,6 +376,10 @@
                 <p>CVE-2019-0191: Zip-slip vulnerability in KAR deployer.</p>
                 <a class="btn btn-outline-primary" href="security/cve-2019-0191.txt">Notes &raquo;</a>
               </div>
+              <div class="pb-4 mb-3">
+                <p>CVE-2019-0226: Arbitrary file write vulnerability in Config service.</p>
+                <a class="btn btn-outline-primary" href="security/cve-2019-0226.txt">Notes &raquo;</a>
+              </div>
 
             </div><!-- /.blog-main -->
         </div>
