--- a/documentation.html
+++ b/documentation.html
@@ -331,6 +331,10 @@ permalink: /documentation
                 <p>CVE-2019-0226: Arbitrary file write vulnerability in Config service.</p>
                 <a class="btn btn-outline-primary" href="/security/cve-2019-0226.txt">Notes &raquo;</a>
               </div>
+              <div class="pb-4 mb-3">
+                <p>CVE-2020-11980: A remote client could create MBeans from arbitrary URLs.</p>
+                <a class="btn btn-outline-primary" href="/security/cve-2020-11980.txt">Notes &raquo;</a>
+              </div>
 
             </div><!-- /.blog-main -->
         </div>
