Publish CVE-2021-41766 and CVE-2022-22932

--- a/documentation.html
+++ b/documentation.html
@@ -356,6 +356,14 @@ permalink: /documentation
                 <p>CVE-2020-11980: A remote client could create MBeans from arbitrary URLs.</p>
                 <a class="btn btn-outline-primary" href="/security/cve-2020-11980.txt">Notes &raquo;</a>
               </div>
+	      <div class="pb-4 mb-3">
+		<p>CVE-2021-41766: Insecure Java Deserialization.</p>
+		<a class="btn btn-outline-primary" href="/security/cve-2021-41766.txt">Notes &raquo;</a>
+	      </div>
+	      <div class="pb-4 mb-3">
+		<p>CVE-2022-22932: Path traversal flaws</p>
+		<a class="btn btn-outline-primary" href="/security/cve-2022-22932.txt">Notes &raquo;</a>
+	      </div>
 
             </div><!-- /.blog-main -->
         </div>
